--- a/gui/src/main/resources/fxml/main.fxml
+++ b/gui/src/main/resources/fxml/main.fxml
@@ -7,48 +7,17 @@
 
 
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ToggleGroup?>
 <BorderPane fx:controller="pl.psi.pizza.guifx.MainController" maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity" minWidth="-Infinity" prefHeight="600" prefWidth="800"
             xmlns:fx="http://javafx.com/fxml/1">
     <top>
-        <VBox alignment="CENTER">
-            <children>
-                <HBox>
-                    <children>
-                        <Label fx:id="orderPriceLabel">a</Label>
-                    </children>
-                </HBox>
-                <HBox>
-                    <children>
-                        <RadioButton fx:id="italianRadio" text="Na cienkim" selected="true">
-                            <HBox.margin>
-                                <Insets right="3.0"/>
-                            </HBox.margin>
-                            <toggleGroup>
-                                <ToggleGroup fx:id="pieGroup"/>
-                            </toggleGroup>
-                        </RadioButton>
-                        <RadioButton fx:id="americanRadio" text="Na grubym">
-                            <HBox.margin>
-                                <Insets right="30.0"/>
-                                <Insets bottom="10.0"/>
-                            </HBox.margin>
-                            <toggleGroup>
-                                <fx:reference source="pieGroup"/>
-                            </toggleGroup>
-                        </RadioButton>
-                    </children>
-                </HBox>
-            </children>
-        </VBox>
+        <VBox fx:id="orderWrapper"></VBox>
     </top>
 
     <center>
-        <VBox fx:id="centerBox" BorderPane.alignment="CENTER">
+        <VBox>
+            <HBox fx:id="MenuChooserWrapper"></HBox>
+            <VBox fx:id="MenuWrapper"></VBox>
         </VBox>
     </center>
 
