--- a/gui/src/main/resources/fxml/main.fxml
+++ b/gui/src/main/resources/fxml/main.fxml
@@ -7,17 +7,17 @@
 
 
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.TabPane?>
 <BorderPane fx:controller="pl.psi.pizza.guifx.MainController" maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity" minWidth="-Infinity" prefHeight="600" prefWidth="800"
             xmlns:fx="http://javafx.com/fxml/1">
     <top>
-        <VBox fx:id="orderWrapper"></VBox>
+        <VBox fx:id="orderPane"></VBox>
     </top>
 
     <center>
         <VBox>
-            <HBox fx:id="menuChooserWrapper"></HBox>
-            <VBox fx:id="menuWrapper"></VBox>
+            <TabPane fx:id="menuTabPane"></TabPane>
         </VBox>
     </center>
 
