--- a/gui/src/main/resources/fxml/main.fxml
+++ b/gui/src/main/resources/fxml/main.fxml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
-
-
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 <BorderPane fx:controller="pl.psi.pizza.guifx.MainController" maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity" minWidth="-Infinity" prefHeight="600" prefWidth="800"
             xmlns:fx="http://javafx.com/fxml/1">
     <top>
-        <VBox fx:id="orderPane"></VBox>
-    </top>
-
-    <center>
         <VBox>
             <TabPane fx:id="menuTabPane"></TabPane>
         </VBox>
+    </top>
+    <center>
+        <VBox fx:id="orderPane"></VBox>
     </center>
 
     <bottom>
