--- a/gui/src/main/resources/fxml/main.fxml
+++ b/gui/src/main/resources/fxml/main.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<BorderPane fx:controller="pl.psi.pizza.guifx.MainController" maxHeight="-Infinity" maxWidth="-Infinity"
+<BorderPane fx:controller="pl.psi.items.guifx.MainController" maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity" minWidth="-Infinity" prefHeight="600" prefWidth="800"
             xmlns:fx="http://javafx.com/fxml/1">
     <top>
